--- a/index.html
+++ b/index.html
@@ -6,8 +6,38 @@
     <title>Payoo Mobile App</title>
     <!-- Tailwind Cdn Connect-->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+    <!-- Daisyui and tailwind cdn -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body>
-    
+<body class="bg-[#f4f5f7] h-[100vh] flex flex-col justify-center items-center">
+    <div class="h-[130px] w-[300px] bg-[url(./assets/bg.png)] bg-cover flex justify-center items-center">
+        <img src="assets/Group.png" alt="">
+
+
+    </div>
+
+
+
+
+    <form class="bg-white rounded-2xl p-8 w-[350px]">
+        <div>
+            <label class="font-semibold" for="">Mobile Number</label>
+            <br>
+            <input id="mobile-number" type="text" placeholder="Enter Your Number" class="input
+            bg-[#f4f5f7] mt-3 rounded-3xl" />
+        </div>
+        <div class="mt-5">
+            <label class="font-semibold" for="">4 Digit Pin</label>
+            <br>
+            <input id="pin-number" type="text" placeholder="Enter 4 Digit Pin" class="input
+            bg-[#f4f5f7] mt-3 rounded-3xl"  />
+        </div>
+        <button id="loginButton" class="btn bg-[#0874f2] mt-5 w-full rounded-3xl text-white">Login</button>
+    </form>
+
+    <!-- js script -->
+    <script src="script.js"></script>
 </body>
 </html>
