--- a/home.html
+++ b/home.html
@@ -3,9 +3,136 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Tailwind Cdn Connect-->
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+    <!-- Daisyui and tailwind cdn -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+    <!-- Font awesome cdn -->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
-<body>
-    <h1>I am Home Page</h1>
+<body class="bg-[#f4f5f7] h-[100vh]">
+
+    <div class="max-w-lg mx-auto bg-white rounded-b-xl">
+
+
+
+    <div class="min-h-[50px] flex justify-between items-center border-b-1 border-gray-400 p-3">
+
+
+    <div class="flex items-center">
+    <img src="./assets/Group.png" alt="">
+
+    <div class="ml-3">
+        <h2 class="font-bold">$<span>45000</span></h2>
+        <p class="text-[#08080880]">Available Balance</p>
+    </div>
+
+    </div>
+
+
+    <div>
+        <button class="btn text-[#08080880]"> <i class="fa-solid fa-arrow-right-from-bracket rotate-180 text-gray-700"></i> Log Out</button>
+    </div>
+
+    </div>
+
+
+    <div class=" mt-8 p-3">
+        <h1 class="text-2xl font-bold">🔥 Welcome to Payooo!</h1>
+        <p class="text-[#08080880]">Enjoy easy and convenient financial services with us. <br> Cashout charge is low and </p>
+    </div>
+
+    <div class=" min-h-[200px] grid grid-cols-3  gap-4 p-3 ">
+
+        <!-- Card Div -->
+
+        <div class="border-2 border-gray-300 text-center p-3 rounded-xl">
+            <img src="./assets/wallet1.png" class="mx-auto" alt="">
+            <h2>Add Money</h2>
+
+        </div>
+
+        <div class="border-2 border-gray-300 text-center p-3 rounded-xl">
+            <img src="./assets/" class="mx-auto" alt="">
+            <h2>Add Money</h2>
+
+        </div>
+
+        <div class="border-2 border-gray-300 text-center p-3 rounded-xl">
+            <img src="./assets/wallet1.png" class="mx-auto" alt="">
+            <h2>Add Money</h2>
+
+        </div>
+
+        <div class="border-2 border-gray-300 text-center p-3 rounded-xl">
+            <img src="./assets/wallet1.png" class="mx-auto" alt="">
+            <h2>Add Money</h2>
+
+        </div>
+
+        <div class="border-2 border-gray-300 text-center p-3 rounded-xl">
+            <img src="./assets/wallet1.png" class="mx-auto" alt="">
+            <h2>Add Money</h2>
+
+        </div>
+
+        <div class="border-2 border-gray-300 text-center p-3 rounded-xl">
+            <img src="./assets/wallet1.png" class="mx-auto" alt="">
+            <h2>Add Money</h2>
+
+        </div>
+
+    </div>
+
+    <div class="all-form-sections max-w-lg mx-auto">
+
+        <!-- Add Money -->
+         <div>
+            <h1 class="my-5 font-bold">Add Money</h1>
+
+            <form class="bg-white rounded-2xl p-3" action="">
+                <div class="mb-3">
+                    <h1 class="font-semibold">Select A Bank</h1>
+                    <select class="select bg-[#f4f5f7] mt-3 rounded-3xl  w-full">
+                    <option disabled selected>Pick a Bank</option>
+                    <option>AB Bank</option>
+                    <option>IBBL</option>
+                    <option>City Bank</option>
+                    </select>
+                </div>
+                <div>
+                <label class="font-semibold" for="">Bank Account Number</label>
+                <br>
+                <input placeholder="Enter 11 digit account number" class="input
+                bg-[#f4f5f7] mt-3 rounded-3xl w-full" />
+                </div>
+
+                <div class="mt-3">
+                <label class="font-semibold" for="">Amount to Add</label>
+                <br>
+                <input   placeholder="Add Amount to withdraw" class="input
+                bg-[#f4f5f7] mt-3 rounded-3xl w-full" />
+                </div>
+
+
+                <div class="mt-3">
+                <label class="font-semibold" for="">Pin Number</label>
+                <br>
+                <input placeholder="Enter 4 digit pin number" class="input
+                bg-[#f4f5f7] mt-3 rounded-3xl w-full" />
+                </div>
+
+                <button class="btn bg-[#0874f2] mt-5 w-full rounded-3xl text-white">Add Money</button>
+            </form>
+         </div>
+
+    </div>
+
+    </div>
+    
 </body>
 </html>
