--- a/home.html
+++ b/home.html
@@ -146,7 +146,7 @@
                 <div class="mt-3">
                 <label class="font-semibold" for="">Amount</label>
                 <br>
-                <input id=""  placeholder="Enter amount to withdraw" class="input
+                <input id="withdraw-amount"  placeholder="Enter amount to withdraw" class="input
                 bg-[#f4f5f7] mt-3 rounded-3xl w-full" />
                 </div>
 
@@ -158,7 +158,7 @@
                 bg-[#f4f5f7] mt-3 rounded-3xl w-full" />
                 </div>
 
-                <button id="" class="btn bg-[#0874f2] mt-5 w-full rounded-3xl text-white">Withdraw Money</button>
+                <button id="withdraw-btn" class="btn bg-[#0874f2] mt-5 w-full rounded-3xl text-white">Withdraw Money</button>
             </form>
 
          </div>
